# kanvert

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.qoder/quests/: unknown-file.md
docs/: API.md  DEVELOPMENT.md  GETTING_STARTED.md
examples/: basic_usage.py  mcp_integration.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/advanced/: AdvancedConversion.tsx  index.ts
frontend/src/components/analytics/: AnalyticsDashboard.tsx
frontend/src/components/auth/: Login.tsx  PasswordReset.tsx  Register.tsx  index.ts
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Loading.tsx  Toast.tsx  index.ts
frontend/src/components/conversion/: ConversionInterface.tsx  FileUpload.tsx  index.ts
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/docs/: ApiDocumentation.tsx  index.ts
frontend/src/components/history/: ConversionHistory.tsx  index.ts
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/sections/: Features.tsx  Hero.tsx  Pricing.tsx
frontend/src/components/settings/: Settings.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useAPI.ts  useAdvanced.ts  useDashboard.ts  useHistory.ts  useSettings.ts
frontend/src/pages/: AdvancedPage.tsx  AnalyticsPage.tsx  ConversionPage.tsx  DashboardPage.tsx  DocumentationPage.tsx  HistoryPage.tsx  LandingPage.tsx  LoginPage.tsx  PasswordResetPage.tsx  RegisterPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  conversionStore.ts  index.ts  notificationStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
kanvert/: main.py
kanvert/api/: advanced.py  auth.py  dashboard.py  history.py  middleware.py  routes.py  settings.py
kanvert/config/: settings.py
kanvert/core/: base.py  config_manager.py  container.py  database.py  factory.py  models.py  plugins.py  registry.py
kanvert/mcp/: routes.py  server.py
kanvert/services/: conversion_service.py  docx_compare.py  docx_pdf.py  email_service.py  html_pdf.py  markdown_pdf.py  office_pdf.py
kanvert/templates/email/: password_reset.html  welcome.html
kanvert/tests/: conftest.py  test_api.py  test_core.py  test_markdown_pdf.py
kanvert/utils/: logging_config.py
